fix footer white space

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,21 +1,15 @@
 footer .container {
   text-align: center;
   color: #bbb;
-  margin: 40px auto;
 }
 
 footer {
   width: 100%;
-  height: 15em;
-  position: absolute;
+
   bottom: 0;
   left: 0;
+  padding-top: 3.5rem;
   background-color: rgb(2, 55, 112);
-}
-
-.content {
-  margin-top: 5em;
-  padding-top: 5em;
 }
 
 footer .blue {
@@ -24,4 +18,16 @@ footer .blue {
 
 footer .orange {
   background-color: rgb(201, 130, 0) 80%;
+}
+
+/* Resize footer wanneer het scherm smaller wordt, dit is nodig omdat er anders white space komt doordat de text in de footer de footer hoger maakt. */
+@media (max-width: 765px) {
+  footer {
+    height: 26em;
+  }
+}
+@media (min-width: 760px) {
+  footer {
+    height: 20em;
+  }
 }
