--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,16 +14,15 @@ main {
 }
 html,
 body {
-  min-height: 100%;
+  min-height: calc(100% - 20em);
 }
 body {
   overflow-x: hidden;
   background: radial-gradient(
     at top left,
-    rgb(207, 207, 207) 25%,
-    rgb(201, 130, 0) 80%
+    rgb(235, 235, 235) 25%,
+    rgb(201, 130, 0) 95%
   );
-
   background-repeat: no-repeat;
 }
 p {
@@ -31,9 +30,20 @@ p {
   line-height: 1.5em;
 }
 
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1;
+  display: block;
+}
+
 /* layout & nav  */
 .layout {
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 nav {
@@ -43,7 +53,6 @@ nav a {
   margin-left: 20px;
   font-weight: 400;
   padding-bottom: 8px;
-  border-bottom: 3px solid transparent;
 }
 nav .links a:hover {
   color: rgb(255, 166, 0);
@@ -56,6 +65,6 @@ nav .links a:hover {
   position: relative;
   margin-left: -50vw;
   height: 100px;
-  margin-top: 100px;
   left: 50%;
+  border-top: 1px dotted #838383;
 }
